2008-03-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/fieldtypes.cc 
	get_string_name_for_gdavaluetype(): Hard-code the result for 
	text fields (G_TYPE_STRING) so we always use varchar. Otherwise 
	we mistakenly create fields of type xml because libgda reports many 
	postgres 8.3 fields types as being of type G_TYPE_STRING.

2008-03-13  Murray Cumming  <murrayc@murrayc.com>

	Bug 521992 – Pressing Escape on Initial dialog does not close 
	application properly.
	(Pavel Mlčoch)

	* glom/dialog_database_preferences.cc load_from_document():
	Do not crash if the Gda::DataModel is empty.

	* glom/application.cc ui_file_select_save(), on_document_load(),
	  offer_new_or_existing():
	* glom/frame_glom.cc on_menu_file_export():
	* glom/utility_widgets/imageglom.cc
	  on_menupopup_activate_select_file(): Check for 
	Gtk::RESPONSE_DELETE_EVENT instead of just Gtk::RESPONSE_CANCEL, so 
	that we treat pressing Escape the same as pressing Cancel. When we 
	just ignore this then we can leave the application in an unexpected 
	state.

1.6.9:

2008-03-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	discover_first_free_port() Reformat the code to make the use of 
	ifdefs for various platforms clearer. Include errno.h and add a comment 
	about how this is essential to make the code actually work.
	This stops Glom from starting a postgres instance on the same port that 
	is used by an existing instance.

1.6.8:

2008-02-04  Murray Cumming <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_details.cc: save_to_document(): 
	Set the sequence number later, to avoid it always being 1, which 
	causes layout groups with those duplicate sequence numbers to be ignored 
	and lost when reloading the document. This stopped people from adding 
	new groups.
	This fixes bug #513774  (Göran)

	Note that svn trunk does not need this fix because we no longer use 
	this explicit sequence number, because it was likely to lead to this 